@@ -1,3 +1,9 @@
+20020321
+ - (bal) OpenBSD CVS Sync
+   - itojun@cvs.openbsd.org 2002/03/08 06:10:16
+     [sftp-client.c]
+     printf type mismatch
+
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
    warn if directory does not exist. Put system directories in front of
@@ -7843,4 +7849,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1923 2002/03/17 22:05:24 tim Exp $
+$Id: ChangeLog,v 1.1924 2002/03/22 01:00:57 mouring Exp $
